@@ -1,3 +1,8 @@
+2010-01-27  Jean-Paul Calderone  <exarkun@twistedmatrix.com>
+
+	* src/ssl/connection.c, src/util.h: Apply patch from Sandro Tosi to
+	  fix misspellings of "compatibility".
+
 2009-11-13  Jean-Paul Calderone  <exarkun@twistedmatrix.com>
 
 	* Release 0.10
